--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,7 @@
 [submodule "dependencies/imgui"]
-	path = dependencies/imgui
+	path = dependencies/imgui/imgui
 	url = https://github.com/ocornut/imgui.git
+	branch = docking
 [submodule "dependencies/glm"]
 	path = dependencies/glm
 	url = https://github.com/g-truc/glm.git
