--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,6 @@
-[submodule "dependencies/imgui"]
-	path = dependencies/imgui/imgui
-	url = https://github.com/ocornut/imgui.git
-	branch = docking
 [submodule "dependencies/glm"]
 	path = dependencies/glm
 	url = https://github.com/g-truc/glm.git
+[submodule "dependencies/imgui/imgui"]
+	path = dependencies/imgui/imgui
+	url = https://github.com/ocornut/imgui.git
